--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 	<script src="lib/jquery/dist/jquery.js"></script>
 	<script src="lib/angular/angular.js"></script>
 	<script src="js/app.config.js"></script>
+	<script src="js/generic.ctrl.js"></script>
 	<script src="js/registration.ctrl.js"></script>
 	<script src="js/registration.app.js"></script>
 
