--- a/meals.html
+++ b/meals.html
@@ -76,6 +76,7 @@
 	</div>
 	<script src="lib/jquery/dist/jquery.js"></script>
 	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angular-sanitize/angular-sanitize.js"></script>
 	<script type="text/javascript"
 		src="lib/slick-carousel/slick/slick.min.js"></script>
 	<script src="js/app.config.js"></script>
