Better rendering for mobile devices

--- a/results.en.html
+++ b/results.en.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Aviron Universitaire - Regataiades Internationales de
 	Nantes</title>
+	
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="stylesheets/screen.css" media="all"
 	type="text/css" />
 <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"
@@ -42,8 +45,8 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "en",
-					"eventsService" : "http://localhost:8080/regataiades-service/results/events",
-					"resultsService" : "http://localhost:8080/regataiades-service/results/category/"
+					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events",
+					"resultsService" : "http://prototype.una-club.fr/regataiades-service/results/category/"
 				});
 
 		lResMgr.init();
