--- a/results.html
+++ b/results.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Aviron Universitaire - Regataiades Internationales de
 	Nantes</title>
 <link rel="stylesheet" href="stylesheets/screen.css" media="all"
@@ -47,8 +49,8 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "fr",
-					"eventsService" : "http://localhost:8080/regataiades-service/results/events",
-					"resultsService" : "http://localhost:8080/regataiades-service/results/category/"
+					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events",
+					"resultsService" : "http://prototype.una-club.fr/regataiades-service/results/category/"
 				});
 
 		lResMgr.init();
