Add race type awareness

--- a/results.html
+++ b/results.html
@@ -23,6 +23,7 @@
 			<span>Régataïades 2015</span> / <span>XXXI Edition</span> / <span
 				class="date">9-10 Mai 2015</span>
 		</h1>
+		<h2 class="race"></h2>
 		<h2 class="live">En direct</h2>
 	</div>
 	<div id="control">
@@ -49,7 +50,7 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "fr",
-					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events",
+					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events/",
 					"resultsService" : "http://prototype.una-club.fr/regataiades-service/results/category/"
 				});
 
