--- a/results.en.html
+++ b/results.en.html
@@ -24,6 +24,7 @@
 			<span>Régataïades 2015</span> / <span>XXXI Edition</span> / <span
 				class="date">9-10 May 2015</span>
 		</h1>
+		<h2 id="race"></h2>
 		<h2 class="live">Live</h2>
 	</div>
 	<div id="control">
@@ -45,7 +46,7 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "en",
-					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events",
+					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events/",
 					"resultsService" : "http://prototype.una-club.fr/regataiades-service/results/category/"
 				});
 
