--- a/results.html
+++ b/results.html
@@ -27,7 +27,7 @@
 		<h2 class="live">En direct</h2>
 	</div>
 	<div id="control">
-		<div>Choisissez la catégorie:</div>
+		<div>Choisissez la catégorie pour accéder aux tirages et aux résultats :</div>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">FU4x</button>
 		<button class="btn btn-default results-button" type="submit"
