--- a/results.en.html
+++ b/results.en.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Aviron Universitaire - Regataiades Internationales de
 	Nantes</title>
-	
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="stylesheets/screen.css" media="all"
@@ -27,13 +27,24 @@
 		<h2 id="race"></h2>
 		<h2 class="live">Live</h2>
 	</div>
+	<div id="preloaderContainer">
+		<div id="preloader">
+			<img src="shared/img/preloader.gif" width="116px" height="40px" />
+		</div>
+	</div>
 	<div id="control">
-		<div>Choose the category to get the starting lists and results: </div>
-		<button class="btn btn-default results-button" type="submit" data-category="W4x">W4x</button>
-		<button class="btn btn-default results-button" type="submit" data-category="W8+">W8+</button>
-		<button class="btn btn-default results-button" type="submit" data-category="M4x">M4x</button>
-		<button class="btn btn-default results-button" type="submit" data-category="M8+">M8+</button>
-		<button class="btn btn-default results-button" type="submit" data-category="">All</button>
+		<div>Choose the category to get the starting lists and results:
+		</div>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="W4x">W4x</button>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="W8+">W8+</button>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="M4x">M4x</button>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="M8+">M8+</button>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="">All</button>
 
 	</div>
 	<div id="results"></div>
