--- a/results.html
+++ b/results.html
@@ -26,8 +26,14 @@
 		<h2 class="race"></h2>
 		<h2 class="live">En direct</h2>
 	</div>
+	<div id="preloaderContainer">
+		<div id="preloader">
+			<img src="shared/img/preloader.gif" width="116px" height="40px" />
+		</div>
+	</div>
 	<div id="control">
-		<div>Choisissez la catégorie pour accéder aux tirages et aux résultats :</div>
+		<div>Choisissez la catégorie pour accéder aux tirages et aux
+			résultats :</div>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">FU4x</button>
 		<button class="btn btn-default results-button" type="submit"
