--- a/results.en.html
+++ b/results.en.html
@@ -24,7 +24,7 @@
 			<span>Régataïades 2015</span> / <span>XXXI Edition</span> / <span
 				class="date">9-10 May 2015</span>
 		</h1>
-		<h2 id="race"></h2>
+		<h2 id="raceTitle"></h2>
 		<h2 class="live">Live</h2>
 	</div>
 	<div id="preloaderContainer">
@@ -33,8 +33,8 @@
 		</div>
 	</div>
 	<div id="control">
-		<div>Choose the category to get the starting lists and results:
-		</div>
+		<h4>Choose the category to get the starting lists and results:
+		</h4>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">W4x</button>
 		<button class="btn btn-default results-button" type="submit"
