--- a/results.html
+++ b/results.html
@@ -23,7 +23,7 @@
 			<span>Régataïades 2015</span> / <span>XXXI Edition</span> / <span
 				class="date">9-10 Mai 2015</span>
 		</h1>
-		<h2 class="race"></h2>
+		<h2 id="raceTitle"></h2>
 		<h2 class="live">En direct</h2>
 	</div>
 	<div id="preloaderContainer">
@@ -32,8 +32,8 @@
 		</div>
 	</div>
 	<div id="control">
-		<div>Choisissez la catégorie pour accéder aux tirages et aux
-			résultats :</div>
+		<h4>Choisissez la catégorie pour accéder aux tirages et aux
+			résultats :</h4>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">FU4x</button>
 		<button class="btn btn-default results-button" type="submit"
