--- a/results.en.html
+++ b/results.en.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Aviron Universitaire - Regataiades Internationales de
-	Nantes</title>
+<title>University Rowing - Regataiades Internationales de Nantes - Live</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
