--- a/results.html
+++ b/results.html
@@ -5,7 +5,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Aviron Universitaire - Regataiades Internationales de
-	Nantes</title>
+	Nantes - En Direct</title>
 <link rel="stylesheet" href="stylesheets/screen.css" media="all"
 	type="text/css" />
 <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"
