[meals] Update dates and remove menues

--- a/meals.html
+++ b/meals.html
@@ -43,8 +43,8 @@
 			<a href="http://una-club.fr" title="Regataiades"><img
 				src="shared/img/logo-ridn-tr.png"></a><a href="http://www.peps-restauration.fr/"
 				title="Regataiades"><img src="shared/img/peps-logo.png"></a>
-			<h1>Régataïades 2015 / XXXI Edition</h1>
-			<h2 id="date">9-10 May 2015</h2>
+			<h1>Régataïades 2016 / XXXII Edition</h1>
+			<h2 id="date">7-8 May 2016</h2>
 		</div>
 		<div class="registrator"
 			data-ng-controller="BookingController as bookCtrl">
@@ -65,9 +65,9 @@
 			<form class="bookForm" name="bookForm"
 				data-ng-submit="bookCtrl.validateForm(bookForm.$valid) && bookCtrl.submitForm()"
 				novalidate data-ng-show="bookCtrl.inProgress && bookCtrl.updateMode" >
-				
+
 				<div data-meal-booking-form></div>
-				
+
 			</form>
 
 			<a href="http://regataiades.fr" class="btn btn-block btn-default">{{bookCtrl.messages.labels.mainpage}}</a>
