[index] Update dates

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<a href="http://una-club.fr" title="Regataiades"><img
 			src="shared/img/logo-ridn.png"></a>
 		<h1>
-			Régataïades 2015 <br />XXXI Edition
+			Régataïades 2016 <br />XXXII Edition
 		</h1>
-		<h2 id="date">9-10 May 2015</h2>
+		<h2 id="date">7-8 May 2016</h2>
 	</div>
 	<div class="registrator"
 		data-ng-controller="RegistrationController as regCtrl">
@@ -47,9 +47,9 @@
 			<div data-coaches-list-form></div>
 			<div data-resume-form></div>
 		</form>
-		
+
 		<a href="http://regataiades.fr" class="btn btn-block btn-default">{{regCtrl.messages.labels.mainpage}}</a>
-		
+
 	</div>
 	<script src="lib/jquery/dist/jquery.js"></script>
 	<script src="lib/angular/angular.js"></script>
