--- a/results.en.html
+++ b/results.en.html
@@ -20,8 +20,8 @@
 		<a href="http://regataiades.fr" title="Regataiades"><img
 			src="shared/img/logo-ridn.png"></a>
 		<h1>
-			<span>Régataïades 2015</span> / <span>XXXI Edition</span> / <span
-				class="date">9-10 May 2015</span>
+			<span>Régataïades 2016</span> / <span>XXXII Edition</span> / <span
+				class="date">7-8 May 2016</span>
 		</h1>
 		<h2 id="raceTitle"></h2>
 		<h2 class="live">Live</h2>
