No W8+ for xxxii edition

--- a/results.html
+++ b/results.html
@@ -37,7 +37,7 @@
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">FU4x</button>
 		<button class="btn btn-default results-button" type="submit"
-			data-category="W8+">FU8+</button>
+			data-category="O8+">MU8+</button>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="M4x">HU4x</button>
 		<button class="btn btn-default results-button" type="submit"
