No W8+ for xxxii edition

--- a/results.en.html
+++ b/results.en.html
@@ -37,7 +37,7 @@
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">W4x</button>
 		<button class="btn btn-default results-button" type="submit"
-			data-category="W8+">W8+</button>
+			data-category="O8+">O8+</button>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="M4x">M4x</button>
 		<button class="btn btn-default results-button" type="submit"
