--- a/results.html
+++ b/results.html
@@ -20,8 +20,8 @@
 		<a href="http://regataiades.fr" title="Regataiades"><img
 			src="shared/img/logo-ridn.png"></a>
 		<h1>
-			<span>Régataïades 2016</span> / <span>XXXII Edition</span> / <span
-				class="date">7-8 Mai 2016</span>
+			<span>Régataïades 2017</span> / <span>XXXIII Edition</span> / <span
+				class="date">6-7 Mai 2017</span>
 		</h1>
 		<h2 id="raceTitle"></h2>
 		<h2 class="live">En direct</h2>
