Set new service urls

--- a/results.html
+++ b/results.html
@@ -56,8 +56,8 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "fr",
-					"eventsService" : "http://prototype.una-club.fr/regataiades-service/results/events/",
-					"resultsService" : "http://prototype.una-club.fr/regataiades-service/results/category/"
+					"eventsService" : "http://regataiades.fr/regataiades-service/results/events/",
+					"resultsService" : "http://regataiades.fr/regataiades-service/results/category/"
 				});
 
 		lResMgr.init();
