--- a/meals.html
+++ b/meals.html
@@ -46,10 +46,9 @@
 	<div id="form-container">
 		<div class="welcome">
 			<a href="http://una-club.fr" title="Regataiades"><img
-				src="shared/img/logo-ridn-tr.png"></a><a href="http://www.peps-restauration.fr/"
-				title="Regataiades"><img src="shared/img/peps-logo.png"></a>
-			<h1>Régataïades 2016 / XXXII Edition</h1>
-			<h2 id="date">7-8 May 2016</h2>
+				src="shared/img/logo-ridn-tr.png"></a>
+			<h1>Régataïades 2016 / XXXIII Edition</h1>
+			<h2 id="date">6-7 May 2016</h2>
 		</div>
 		<div class="registrator"
 			data-ng-controller="BookingController as bookCtrl">
