Add masters events in events selection

--- a/results.en.html
+++ b/results.en.html
@@ -43,6 +43,10 @@
 		<button class="btn btn-default results-button" type="submit"
 			data-category="M8+">M8+</button>
 		<button class="btn btn-default results-button" type="submit"
+			data-category="MW4x">MW4x</button>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="MM4+">MM4+</button>
+		<button class="btn btn-default results-button" type="submit"
 			data-category="">All</button>
 
 	</div>
