--- a/results.html
+++ b/results.html
@@ -43,6 +43,10 @@
 		<button class="btn btn-default results-button" type="submit"
 			data-category="M8+">HU8+</button>
 		<button class="btn btn-default results-button" type="submit"
+			data-category="MW4x">FM4x</button>
+		<button class="btn btn-default results-button" type="submit"
+			data-category="MM4+">MM4+</button>
+		<button class="btn btn-default results-button" type="submit"
 			data-category="">Tout</button>
 
 	</div>
