--- a/results.en.html
+++ b/results.en.html
@@ -37,6 +37,8 @@
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">W4x</button>
 		<button class="btn btn-default results-button" type="submit"
+			data-category="W8+">W8+</button>
+		<button class="btn btn-default results-button" type="submit"
 			data-category="O8+">O8+</button>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="M4x">M4x</button>
