--- a/results.html
+++ b/results.html
@@ -37,6 +37,8 @@
 		<button class="btn btn-default results-button" type="submit"
 			data-category="W4x">FU4x</button>
 		<button class="btn btn-default results-button" type="submit"
+			data-category="W8+">FU8+</button>
+		<button class="btn btn-default results-button" type="submit"
 			data-category="O8+">MU8+</button>
 		<button class="btn btn-default results-button" type="submit"
 			data-category="M4x">HU4x</button>
