--- a/results.en.html
+++ b/results.en.html
@@ -62,8 +62,8 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "en",
-					"eventsService" : "http://localhost:8080/regataiades-service/results/events/",
-					"resultsService" : "http://localhost:8080/regataiades-service/results/category/"
+					"eventsService" : "http://regataiades.fr/regataiades-service/results/events/",
+					"resultsService" : "http://regataiades.fr/regataiades-service/results/category/"
 				});
 
 		lResMgr.init();
