--- a/signup.html
+++ b/signup.html
@@ -21,9 +21,9 @@
 		<a href="http://una-club.fr" title="Regataiades"><img
 			src="shared/img/logo-ridn.png"></a>
 		<h1>
-			Régataïades 2017 <br />XXXIII Edition
+			Régataïades 2018 <br />XXXIV Edition
 		</h1>
-		<h2 id="date">6-7 May 2017</h2>
+		<h2 id="date">5-6 May 2018</h2>
 	</div>
 	<div class="registrator"
 		data-ng-controller="RegistrationController as regCtrl">
