--- a/results.html
+++ b/results.html
@@ -20,8 +20,8 @@
 		<a href="http://regataiades.fr" title="Regataiades"><img
 			src="shared/img/logo-ridn.png"></a>
 		<h1>
-			<span>Régataïades 2017</span> / <span>XXXIII Edition</span> / <span
-				class="date">6-7 Mai 2017</span>
+			<span>Régataïades 2018</span> / <span>XXXIV Edition</span> / <span
+				class="date">5-6 Mai 2017</span>
 		</h1>
 		<h2 id="raceTitle"></h2>
 		<h2 class="live">En direct</h2>
@@ -62,8 +62,8 @@
 		var lResMgr = new ResultsManager(
 				{
 					"lang" : "fr",
-					"eventsService" : "http://regataiades.fr/regataiades-service/results/events/",
-					"resultsService" : "http://regataiades.fr/regataiades-service/results/category/"
+					"eventsService" : "http://results.regataiades.fr/regataiades-service/results/events/",
+					"resultsService" : "http://results.regataiades.fr/regataiades-service/results/category/"
 				});
 
 		lResMgr.init();
