Fix cache issues

--- a/results.html
+++ b/results.html
@@ -62,7 +62,7 @@
 	<script src="lib/jquery/dist/jquery.js"></script>
 	<script src="js/extra/json2html.js"></script>
 	<script src="js/extra/jquery.json2html.js"></script>
-	<script src="js/results.mgt.js"></script>
+	<script src="js/results.mgt.01.js"></script>
 	<script type="text/javascript">
 		var lResMgr = new ResultsManager(
 				{
