--- a/results.html
+++ b/results.html
@@ -25,8 +25,8 @@
 		<a href="http://regataiades.fr" title="Regataiades"><img
 			src="shared/img/logo-ridn.png"></a>
 		<h1>
-			<span>Régataïades 2018</span> / <span>XXXIV Edition</span> / <span
-				class="date">5-6 Mai 2018</span>
+			<span>Régataïades 2019</span> / <span>XXXV Edition</span> / <span
+				class="date">4-5 Mai 2019</span>
 		</h1>
 		<h2 id="raceTitle"></h2>
 		<h2 class="live">En direct</h2>
